--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,3 +6,17 @@
 @import "blocks/normalize.scss";
 @import "blocks/visually-hidden";
 @import "blocks/list.scss";
+@import "blocks/container.scss";
+@import "blocks/wrapper.scss";
+@import "blocks/header.scss";
+@import "blocks/burger.scss";
+@import "blocks/navigation.scss";
+@import "blocks/main.scss";
+@import "blocks/top.scss";
+@import "blocks/button.scss";
+@import "blocks/slider.scss";
+@import "blocks/small-slider.scss";
+@import "blocks/slider-buttons.scss";
+@import "blocks/positions.scss";
+@import "blocks/tooltip.scss";
+@import "blocks/popup.scss";
