--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -4,6 +4,7 @@
   font-size: 12px;
   line-height: 18px;
   color: $textColor;
+  background-color: $whiteColor;
 }
 
 @media(min-width: $tabletResolution) {
