--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 
 @import "blocks/normalize.scss";
 @import "blocks/visually-hidden";
+@import "blocks/none.scss";
 @import "blocks/list.scss";
 @import "blocks/container.scss";
 @import "blocks/wrapper.scss";
