--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,3 +21,6 @@
 @import "blocks/positions.scss";
 @import "blocks/tooltip.scss";
 @import "blocks/popup.scss";
+@import "blocks/checkbox.scss";
+@import "blocks/close.scss";
+@import "blocks/dark.scss";
