--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,7 @@ $textColor: #2b2d3a;
 $mainColor: #397dff;
 $headerColor: #ebeef5;
 $whiteColor: #ffffff;
+$inputColor: rgba(0, 0, 0, 0.2);
 
 $tabletResolution: 768px;
 $desktopResolution: 1200px;
