--- a/source/sass/blocks/burger.scss
+++ b/source/sass/blocks/burger.scss
@@ -12,6 +12,7 @@
         height: 2px;
         background-color: $textColor;
         position: relative;
+        transition: all 0.4s;
     }
 
     div::before,
@@ -23,6 +24,7 @@
         height: 2px;
         background-color: $textColor;
         left: 0;
+        transition: all 0.4s;
     }
 
     div::before {
@@ -31,5 +33,29 @@
 
     div::after {
         bottom: -6px;
+    }
+}
+
+.opened {
+    div {
+        background-color: transparent;
+    }
+
+    div::before {
+        transform: rotate(-45deg);
+        opacity: 1;
+        top: 0;
+    }
+
+    div::after {
+        transform: rotate(45deg);
+        opacity: 1;
+        bottom: 0;
+    }
+}
+
+@media(min-width: $desktopResolution) {
+    .burger {
+        display: none;
     }
 }
