--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,10 +3,54 @@
     box-sizing: border-box;
     padding: 15px;
     margin-bottom: 6px;
+    transition: all 0.4s;
 }
 
 .header__logo {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header {
+    .button {
+        max-width: 290px;
+    }
+}
+
+.sticky {
+    position: sticky;
+    z-index: 2000;
+    top: 0;
+}
+
+.opacity {
+    transition: all 0.4s;
+    opacity: 0;
+}
+
+@media (min-width: $tabletResolution) {
+    .header {
+        padding: 40px 34px;
+        margin-bottom: 0;
+
+        .button {
+            max-width: 270px;
+        }
+    }
+}
+
+@media(min-width: $desktopResolution) {
+    .header {
+        padding: 0 20px;
+    }
+
+    .header__wrapper {
+        display: flex;
+        align-items: center;
+        max-width: 1200px;
+        box-sizing: border-box;
+        padding: 36px 0;
+        margin: 0 auto;
+    }
 }
