--- a/source/sass/blocks/small-slider.scss
+++ b/source/sass/blocks/small-slider.scss
@@ -1,3 +1,43 @@
 .small-slider {
     display: none;
 }
+
+@media (min-width: $desktopResolution) {
+    .small-slider {
+        display: block;
+        background-color: transparent;
+        position: absolute;
+        top: 214px;
+        right: -150px;
+        z-index: 800;
+
+        ul {
+            display: flex;
+        }
+
+        li {
+            width: 100%;
+            max-width: 344px;
+            box-sizing: border-box;
+            padding: 34px;
+            border-right: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        li {
+            b {
+                font-weight: bold;
+                font-size: 64px;
+                line-height: 78px;
+                font-weight: bold;
+                margin-bottom: 24px;
+                color: $mainColor;
+            }
+
+            p {
+                font-size: 14px;
+                line-height: 22px;
+                color: rgba(255, 255, 255, 0.7);
+            }
+        }
+    }
+}
