--- a/source/sass/blocks/top.scss
+++ b/source/sass/blocks/top.scss
@@ -105,6 +105,7 @@
 @media (min-width: $desktopResolution) {
     .top {
         margin-bottom: 120px;
+        overflow-x: hidden;
     }
 
     .top__wrapper {
