--- a/source/sass/blocks/tooltip.scss
+++ b/source/sass/blocks/tooltip.scss
@@ -88,6 +88,7 @@
         padding-left: 24px;
         margin-bottom: 12px;
         position: relative;
+        width: 100%;
 
         &::before,
         &::after {
