Вносит изменения для валидации

--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -54,6 +54,11 @@
     .button {
         margin-top: 16px;
     }
+
+    .navigation__button {
+        padding: 0;
+        border: none;
+    }
 }
 
 .navigation__mail,
