--- a/source/sass/blocks/none.scss
+++ b/source/sass/blocks/none.scss
@@ -7,3 +7,11 @@
     transition: all 0.6s;
     pointer-events: none;
 }
+
+
+@media (min-width: $desktopResolution) {
+    .navigation.none {
+        display: flex;
+        justify-content: flex-end;
+    }    
+}
